--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
 
 html, body {
     min-height:100vh;
-    overflow-x: hidden;
+    overflow: hidden;
     height: 100%;
 }
 
